--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,1 +1,18 @@
 <%- include("partials/header") %>
+<div
+  class="w-full min-h-screen bg-gradient-to-r from-blue-500 to-cyan-600 flex flex-col items-center justify-center"
+>
+  <h1
+    class="text-[25px] text-center w-10/12 md:text-[30px] lg:text-[45px] font-bold tracking-wide text-white pb-2 border-b-2 border-gray-200"
+  >
+    Yoshlar Malumotlar bazasi platformasi
+  </h1>
+  <p
+    class="text-white mt-3 font-medium w-8/12 text-md lg:text-[18px] text-center"
+  >
+    Ushbu platforma orqali yoshlar barcha yangiliklardan xabardor bo'lishlari,
+    elektron kutubxonadan foydalanishlari va qulayliklarga ega bo'lishlari
+    mumkin
+  </p>
+</div>
+<%- include("partials/footer") %>
