--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -9,16 +9,18 @@
   </head>
   <body class="overflow-x-hidden">
     <nav class="w-full h-[80px] bg-blue-200 relative">
-      <div class="container mx-auto h-full flex items-center justify-between">
+      <div
+        class="container mx-auto h-full flex items-center justify-between px-2 lg:px-0"
+      >
         <img
           src="/public/images/logo.png"
           alt="logo"
           class="w-[150px] h-[80px]"
         />
         <ul
-          class="flex flex-col absolute top-0 right-0 h-screen bg-pink-500 w-[300px] p-3 gap-y-5 md:flex-row md:relative gap-x-5 only:font-semibold"
+          class="hidden lg:flex flex-col absolute top-0 right-0 h-screen bg-white border-l border-gray-200 shadow-md lg:shadow-none lg:border-0 w-[300px] p-3 gap-y-5 lg:bg-transparent lg:flex-row lg:relative lg:h-auto lg:w-auto lg:gap-x-5 lg:gap-y-0 nav-list"
         >
-          <li class="md:hidden self-end cursor-pointer">
+          <li class="lg:hidden self-end cursor-pointer close">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-6 w-6"
@@ -79,7 +81,7 @@
         </ul>
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6 block md:hidden stroke-gray-800"
+          class="h-6 w-6 block cursor-pointer lg:hidden stroke-gray-800 menu"
           fill="none"
           viewBox="0 0 24 24"
           stroke="currentColor"
