--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -31,7 +31,7 @@
           <h1
             class="text-[25px] text-center w-10/12 md:text-[30px] lg:text-[45px] font-bold tracking-wide text-white pb-2 border-b-2 border-gray-200"
           >
-            Yoshlar Malumotlar bazasi platformasi
+            Yoshlar Ma'lumotlar bazasi platformasi
           </h1>
           <p
             class="text-white mt-3 font-medium w-8/12 text-md lg:text-[18px] text-center"
